# ml-scoring-rs

./: .gitignore  .luarc.json  Cargo.toml  README.md  cdw.json  docker-compose.yaml
dockerfiles/: Dockerfile
grafana/dashboards/: feature_serving.json  scoring_serving.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasrouce.yml
prometheus/: prom.yaml
scripts/: stree_test.lua  stress_test_only_score.lua  stress_test_scoring.lua
services/feature_server/: Cargo.toml
services/feature_server/src/: lib.rs  main.rs
services/scoring_server/: Cargo.toml
services/scoring_server/src/: main.rs
services/update_features/: Cargo.toml
services/update_features/src/: main.rs
terraform/: ecr.tf  efs.tf  main.tf  networking.tf  terraform.tfstate.backup
