[package]
name = "feature_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-web-prometheus = "0.1.2"
parking_lot = "0.12.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.40"
tracing-actix-web = "0.7.15"
tracing-subscriber = "0.3.18"
